[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/card.png" type="Texture" id=1]
[ext_resource path="res://scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://fonts/SF Atarian System.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 64
outline_size = 0
outline_color = Color( 1, 1, 1, 1 )
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Card" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="CostLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -150.0
margin_right = -60.0
margin_bottom = -102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.180392, 0.694118, 0.945098, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_fonts/font" ]

[node name="HitLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = 80.0
margin_right = -60.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.760784, 0.0666667, 0.0666667, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_fonts/font" ]

[node name="DefenseLabel" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_top = 80.0
margin_right = 100.0
margin_bottom = 145.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.164706, 0.701961, 0.184314, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_fonts/font" ]

[node name="Symbol" type="Sprite" parent="."]

